1998-10-18  Yo Ric Dude  <ricdude@ix.netcom.com>

	* esd-server.h, esd.c, esddsp.c, players.c: how did monitoring
	ever work like that? corrected the header, actually passed in the
	length of the monitor buffer.

1998-10-17  Raja R Harinath  <harinath@cs.umn.edu>

	* configure.in (nanosleep): Make this work on Solaris.
	From Brandon S. Allbery.

1998-10-17  Yo Ric Dude  <ricdude@ix.netcom.com>

	* esddsp.c: added Yosh's slick trick for transparently
	rerouting /dev/dsp to esd.  Only tested with Linux and
	x11amp.  Directions are in the source file for the brave.

Sat Oct 17 02:20:42 PDT 1998 Manish Singh <yosh@gimp.org>

	* esd.c, acconfig.h, configure.in: emulated nanosleep with select
	for systems that don't have it. Compiles on DU4, FreeBSD

	* audio_oss.c: FreeBSD uses __FreeBSD__, not FREEBSD

1998-10-16  Yo Ric Dude  <ricdude@ix.netcom.com>

	* filter.c, mix.c, players.c: misc optimizations courtesy of Bibek.

	* audio_hpux.c: HP-UX patches courtest of Jimmy Olsen <jo@hrp.no>.
	It is claimed that esd now runs on HP-Ux

	* esd-server.h, esd.c, filter.c, players.c, proto.c: added support 
	for multiple simultaneous monitor streams.

Fri Oct 16 02:48:26 PDT 1998 Manish Singh <yosh@gimp.org>

	* esd.h: removed system includes so it doesn't "pollute"

	* audio.c, esd-server.h, esd.h, essrldcat.c esdctl.c, esdfilt.c,
	esdloop.c, esdmon.c, esdplay.c, esdrec.c, esdsample.c: added
	in specifc #includes so it compiles again

1998-10-14  Yo Ric Dude  <ricdude@ix.netcom.com>

	* Makefile.am: esdctl now uses getopt_long, and therefore needs
	the LIBOBJS in it's LDADD.

	* esdctl.c: beefed up esdctl for industrial grade use.  added an
 	exit_usage function, and getopt style option parsing.  It was
 	destined to become esdsh, but this in combination with a real
 	scripting language should be suffient.

1998-10-13  Yo Ric Dude  <ricdude@ix.netcom.com>

	* esdlib.c, proto.c: trap for NULL name sent to sample_getid(),
 	and check for sample names beyond the head of the list.
